@@ -275,6 +275,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA i470D  (EXPERIMENTAL)
        Canon PIXMA i550   (EXPERIMENTAL)
        Canon PIXMA i950   (EXPERIMENTAL)
+       Canon PIXMA i960   (EXPERIMENTAL)
        Canon PIXMA iP3600 (EXPERIMENTAL)
        Canon PIXMA iP3500 (EXPERIMENTAL)
        Canon PIXMA iP3300 (EXPERIMENTAL)
